private/shared/css/style_guide.css
.confirmation_message_container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex-grow: 1;
}

ul {
  padding: 0;
}

ul li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

figcaption {
  text-align: right;
  font-size: 0.7em;
}

u {
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-decoration-color: #c03949;
}

a {
  color: #c03949;
}

a:hover {
  color: #a11a2a;
}

a:visited {
  color: #6d0814;
}

h1,
h2,
.custom_table caption {
  color: #80658b;
}

blockquote {
  text-align: justify;
}

figure img {
  width: 100%;
}

.centered_text {
  text-align: center;
}

.custom_table caption {
  font-size: 2rem;
  text-align: left;
}

.custom_table th {
  background-color: #010116;
  color: #f8f8f8;
}

.custom_table td,
.custom_table th {
  padding: 8px;
  border: 1px solid #010116;
}

.custom_table {
  width: 100%;
  padding: 15px;
  text-align: center;
}

/* TODO: Intentar eliminar esta clase. */
.text_tab {
  padding-left: 3em;
}

form,
textarea,
input[type="date"] {
  font-family: "Sulphur Point", serif;
}

form {
  box-sizing: border-box;
  margin: auto;
  padding: 0.75em;
}

fieldset {
  width: 100%;
  position: relative;
  border: none;
}

form label {
  margin-bottom: 0.5em;
  display: block;
}

form input,
textarea,
select {
  font-size: 0.9em;
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
input[type="number"],
input[type="date"] {
  outline: none;
  display: inline-block;
  box-sizing: border-box;
  width: 100%;
  height: 42px;
  cursor: text;
  padding: 0 3rem 0 1.25rem;
  border: none;
  border-radius: 0.25em;
  color: #010116;
  text-overflow: ellipsis;
  background: #f8f8f8;
  box-shadow: 1px 1px 3px 0 #01011680 inset;
}

.input_group_container {
  display: flex;
  justify-content: space-between;
}

form input:hover {
  background: #fad86080;
}

.form_icon {
  width: 1em;
  height: 1em;
  position: absolute;
  right: 2em;
  top: 55%;
  fill: #010116;
}

textarea {
  resize: vertical;
  padding: 1em 1.25em;
  width: 97%;
  height: 150px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  outline: none;
  box-shadow: 1px 1px 3px 0 #01011680 inset;
  border-radius: 0.25em;
}

textarea:focus {
  border: 2px solid #fad860;
}

.select {
  position: relative;
  display: inline-block;
  margin-bottom: 15px;
  width: 100%;
}

.select select {
  display: inline-block;
  width: 100%;
  cursor: pointer;
  padding: 10px 15px;
  outline: 0;
  border: 1px solid #010116;
  border-radius: 6px;
  background: #f8f8f8;
  color: #010116;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}
.select select::-ms-expand {
  display: none;
}
.select select:hover,
.select select:focus {
  color: #010116;
  background: #fad86080;
}
.select select:disabled {
  opacity: 0.5;
  pointer-events: none;
}
.select_arrow {
  position: absolute;
  top: 16px;
  right: 15px;
  width: 0;
  height: 0;
  pointer-events: none;
  border-style: solid;
  border-width: 8px 5px 0 5px;
  border-color: #010116 transparent transparent transparent;
}
.select select:hover ~ .select_arrow,
.select select:focus ~ .select_arrow {
  border-top-color: #010116;
}

/* FILE */

.file {
  position: relative;
  display: inline-block;
  cursor: pointer;
  height: 2rem;
}

.file input {
  max-width: 50%;
  margin: 0;
  opacity: 0;
}

.file-custom {
  /* width: 50%; */
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 5;
  padding: 0.5rem 1rem;
  color: #010116;
  background-color: #f8f8f8;
  border: 0.075rem solid #010116;
  border-radius: 0.25rem;
  box-shadow: inset 0 0.2rem 0.4rem rgba(0, 0, 0, 0.05);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: border-box;
}

.file-custom:before {
  content: "Choose file...";
}

.file-custom:after {
  position: absolute;
  top: -0.075rem;
  right: -0.075rem;
  bottom: -0.075rem;
  z-index: 6;
  display: block;
  content: "Browse";
  padding: 0.5rem 1rem;
  line-height: 1.5;
  color: #010116;
  background-color: #fad860;
  border: 0.075rem solid #010116;
  border-radius: 0 0.25rem 0.25rem 0;
}

/* Get rid of arrows on input type="date" */
input[type="date"]::-webkit-inner-spin-button {
  display: none;
}

/* CHECKBOXES AND RADIO */
form .control_input_checkbox_radio {
  display: block;
  position: relative;
  padding-left: 30px;
  margin-bottom: 15px;
  cursor: pointer;
  font-size: 18px;
}

form .control_input_checkbox_radio input {
  position: absolute;
  z-index: -1;
  opacity: 0;
}

form .input_checkbox_radio_indicator {
  position: absolute;
  top: 2px;
  left: 0;
  height: 20px;
  width: 20px;
  background: #e6e6e6;
}

form .control-radio .input_checkbox_radio_indicator {
  border-radius: 50%;
}

form
  .control_input_checkbox_radio:hover
  input
  ~ .input_checkbox_radio_indicator,
form
  .control_input_checkbox_radio
  input:focus
  ~ .input_checkbox_radio_indicator {
  background: #ccc;
}

form
  .control_input_checkbox_radio
  input:checked
  ~ .input_checkbox_radio_indicator {
  background: #fad860;
}

form
  .control_input_checkbox_radio:hover
  input:not([disabled]):checked
  ~ .input_checkbox_radio_indicator,
form
  .control_input_checkbox_radio
  input:checked:focus
  ~ .input_checkbox_radio_indicator {
  background: #fad860;
}

form .input_checkbox_radio_indicator:after {
  content: "";
  position: absolute;
  display: none;
}

form
  .control_input_checkbox_radio
  input:checked
  ~ .input_checkbox_radio_indicator:after {
  display: block;
}

form .control-checkbox .input_checkbox_radio_indicator:after {
  left: 8px;
  top: 4px;
  width: 3px;
  height: 8px;
  border: solid #f8f8f8;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
}

form .control-radio .input_checkbox_radio_indicator:after {
  left: 7px;
  top: 7px;
  height: 6px;
  width: 6px;
  border-radius: 50%;
  background: #f8f8f8;
}
/* END CHECKBOXES AND RADIO */

button.send_button {
  outline: none;
  cursor: pointer;
  position: relative;
  z-index: 3;
  border: solid 3px #fad860;
  border-radius: 22px;
  padding: 10px 40px;
  text-transform: uppercase;
  transition: all 0.2s linear;
  font-weight: 700;
  color: #010116;
  background: transparent;
}

button.send_button:hover {
  transform: translateY(-2px);
  background: #fad860;
}

button.send_button:active {
  border-style: inset;
}

@media screen and (max-width: 699px) {
  main > div {
    padding: 2px 10px;
  }

  .table_responsive table thead {
    display: none;
  }

  .table_responsive table tr {
    display: block;
    border-top: 2px solid #e6e6e6; /* separate row data with thicker line */
    margin-top: 5px;
  }

  .table_responsive table td {
    display: block;
    text-align: right;
  }

  /* necessary to show label on left */
  .table_responsive table td:before {
    content: attr(data-label);
    background-color: #010116;
    color: #f8f8f8;
    width: 85px;
    height: 20px;
    padding: 5px;
    text-align: left;
    float: left; /* label to left */
    font-weight: 700;
    border-radius: 4px;
  }

  form {
    width: 100%;
  }

  .file {
    width: 70%;
  }
}

@media screen and (min-width: 700px) {
  #main_layout > div {
    padding: 8px 25px 8px 25px;
  }

  form {
    width: 80%;
  }

  .file {
    width: 100%;
  }
}

